fine check cap 2 Leo

--- a/latex_source/capitolo1.tex
+++ b/latex_source/capitolo1.tex
@@ -35,7 +35,9 @@ dove $h= \SI{6.62e-34}{J.s}$ \'e la costante di Planck, mentre $\nu$ \'e la freq
 \begin{equation}
 \nu= \frac{v}{\lambda}
 \end{equation}
-dove $v$ è la velocità dell'onda, che nel caso di un'onda elettromagnetica è pari a $c= \SI{2.99e8}{m.\per.s}$, ovvero la velocit\'a della luce nel vuoto.
+dove $v$ è la velocità dell'onda, che nel caso di un'onda elettromagnetica è pari a $c= \SI{2.99e8}{m.\per.s}$, ovvero la velocit\'a della luce nel vuoto. 
+
+In fisica, la lunghezza d'onda, di un'onda periodica, è la distanza tra due creste o fra due ventri della sua forma d'onda, e viene comunemente indicata dalla lettera greca $\lambda$.
 
 Un laser \'e un sistema ottico costituito da due specchi separati da un mezzo attivo, il quale pu\'o essere un solido, un liquido, un gas o un semiconduttore. Si consideri il mezzo attivo come un insieme di atomi (sistema atomico) e per semplicit\'a di trattazione si ipotizzi che il materiale attivo in questione, investito dalla radiazione, abbia due soli livelli energetici dotati rispettivamente di energia $E_{1}$ e $E_{2}$ con $E_{2}>E_{1}$. Definiamo lo stato ad energia inferiore $E_{1}$ come stato fondamentale e lo stato ad energia superiore $E_{2}$ come stato eccitato.
 \begin{figure}[H]
